--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@ body {
     padding: 0;
     background-color: #0D122E;
     color: #F4F5F7;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
 }
+
+
 
 /* container for poster and info divs */
 .container {
@@ -25,18 +29,34 @@ body {
     width: 100%;
     height: 1527px;
     background-color: #424660;
-    margin: auto;
 }
 
 .info-field {
     display: flex;
     border-top: 4px solid #F6DE24;
     height: 10rem;
-    width: 100%;
     margin-top: 1rem;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
-
+.img{
+    height: 100%;
+    margin-left: 57px;
+}
+.open-est{
+    margin-left: 57px;
+    height: 50px;
+}
+.open-eng{
+    height: 50px;
+}
+.co p{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+}
+.co svg{
+    margin-right: 25px;
+}
 .img, .open-eng, .open-est, .info {
     border: 1px solid #F6DE24;
 }
