--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ body {
     width: 100%;
     height: 1527px;
     background-color: #424660;
+    border-bottom: 4px solid #F6DE24;
 }
 
 .info-field {
     display: flex;
-    border-top: 4px solid #F6DE24;
     height: 10rem;
     margin-top: 1rem;
     justify-content: space-evenly;
@@ -58,7 +58,7 @@ body {
     margin-right: 25px;
 }
 .img, .open-eng, .open-est, .info {
-    border: 1px solid #F6DE24;
+
 }
 
 
