added setTime function

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    width: 1080;
-    height: 1920;
+    width: 1080px;
+    height: 1920px;
     margin: 0;
     padding: 0;
     background-color: #323431;
